add: prediceted template for site

--- a/site/mySite.html
+++ b/site/mySite.html
@@ -2,20 +2,29 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Om Hoa</title>
+        <title>About me</title>
+        <link rel="stylesheet" type="text/css" href="site.css">
+        <link rel="stylesheet" type="text/css" href="mobileSite.css">
     </head>
     <body>
-        <header>
+        <header id="header">
             <h1>Hoa Ben The Nguyen</h1>
         </header>
-        <nav>
-
+        <nav id="nav">
+            <div id="menu">
+                <ul>
+                    <li><a href="#">About me</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Om meg</a></li>
+                    <li><button>Toggle gamer</button></li>
+                </ul>
+            </div>
         </nav>
-        <main>
+        <main id="main">
 
         </main>
-        <footer>
-            <p>.com is a property of Hoa Ben The Nguyen,Ltd. ©2023 All Rights Reserved.</p>
+        <footer id="footer">
+            <p>This is a property of Hoa Ben The Nguyen,Ltd. ©2023 All Rights Reserved.</p>
         </footer>
     </body>
 </html>
